<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Delta Airlines</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="login">Login</string>
    <string name="enroll">Enroll</string>
    <string name="welcome">Welcome To Delta Airlines</string>
    
    <string name="from_city">From: </string>
    <string name="to_city">To: </string>
    <string name="departure_date">Departure Date: </string>
    <string name="arrival_time">Arrival Time: </string>
    <string name="check_flights">Check For Flights</string>
    
    <string name="ticket_selection">Select Ticket Class</string>
    <string name="economy_class">Economy</string>
    <string name="business_class">Business</string>
    <string name="first_class">First</string>
    <string name="flight_num">Flight# </string>
    
    <string name="new_customer">New Customer?</string>
    <string name="setTime">Select A Time</string>
    <string name="departure_time">Departure Time: </string>
    <string name="setDate">Select A Date</string>
    <string name="purchaseTicket">Confirm Purchase</string> 

</resources>
