<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:scaleType="fitXY"
        android:src="@drawable/login"
        tools:ignore="ContentDescription" />
    
    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff"
        android:textStyle="bold|italic" />
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="105dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/logo"
        android:orientation="vertical" >

        <AutoCompleteTextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="text" >

            <requestFocus />
        </AutoCompleteTextView>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:onClick="whenLoggingInOnClick"
            android:text="@string/login" />

    </RelativeLayout>
    
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="#000000" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="15dp"
	        android:layout_marginLeft="10dp"
	        android:text="@string/new_customer" />
        
	    <Button
	        android:id="@+id/signin_btn"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="whenLoggingInOnClick"
	        android:text="@string/enroll" />
    
    </LinearLayout>

</RelativeLayout>